# gallstone-risk-rural-peru-ml

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.vault/: 00_index.md  10_project_story.md  11_interview_pitch.md  12_decisions_tradeoffs.md  13_hard_questions.md  14_metrics_claims.md  15_contribution.md  README.md
.vault/demo/: 00_orchestrator.md  01_fase_backend.md  02_fase_resultados.md  03_fase_consulta.md  04_fase_bioimpedancia.md  05_fase_deploy.md  06_data_contracts.md  07_frontend_v2_redesign.md  99_open_questions.md
.vault/private/: .gitkeep
.vault/templates/: interview_prep_template.md  interview_retro_template.md  new_project_template.md
archive/: Todos_los_datos.ipynb  WC_Alvaro.ipynb  WC_FInal.ipynb  WC_jandro.ipynb  WC_rody.ipynb  menos_datos.ipynb
demo/backend/: Dockerfile  README.md  postman_collection.json  pyproject.toml
demo/backend/app/: main.py  predictor.py  schemas.py
demo/backend/models/: bioimpedance_templates.json  rural_metrics.json
demo/frontend/: package-lock.json  package.json
figures/: replica_metrics.json
notebooks/: 01_replicacion_paper.ipynb  02_adaptacion_rural_peru.ipynb
results/ml/: README.md  full_repeated_cv_metrics.csv  full_repeated_cv_summary.csv  rural_feature_scheme_metrics.csv  rural_feature_scheme_summary.csv  rural_feature_stability.csv  rural_oof_predictions.csv  rural_repeated_cv_metrics.csv  rural_repeated_cv_summary.csv  (+2 more)
scripts/: build_ml_validation_reports.py  build_portfolio_assets.py  deploy_hf_space.sh  export_model.py  portfolio_pipeline.py
(+26 files in other folders)
