[project]
name = "gallstone-demo-backend"
version = "0.1.0"
description = "FastAPI backend for the gallstone rural-adaptation demo"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "scikit-learn==1.7.2",
    "shap==0.51.0",
    "numpy==2.3.1",
    "joblib>=1.3",
    "pydantic>=2.7",
]

[tool.uv]
package = false
